<resources>
    <string name="app_name">Memory Game</string>
    <string name="scrolling_text">Welcome to Memory Game! Please enter the website URL to choose pictures.</string>
    <string name="url_placeholder">URL</string>
    <string name="fetch_buttontext">Fetch</string>
    <string name="start_buttontext">Start Game</string>
    <string name="back_buttontext">Back</string>
    <string name="save_buttontext">Save Changes</string>
    <string name="default_buttontext">Restore Default</string>
    <string name="score">Score: 0</string>
    <string name="recyclerImageView">ImageView in RecyclerView</string>
    <string name="action_settings">Settings</string>
    <string name="fetch_settings">Fetch maximum items: </string>
    <string name="grid_settings">Images per row: </string>
    <string name="jsoup_settings">Enable Glide library: </string>
    <string name="glide_settings">Enable jsoup library: </string>
    <string name="helptext">Please select 6 images</string>

    <string name="default_matches">0/6 matches</string>
    <string name="default_time">00:00:00</string>
    <string name="game_welcome">Welcome to the memory game!</string>
    <string name="pause_buttontext">Pause</string>
    <string name="paused_text">PAUSED</string>

<<<<<<< Updated upstream
=======
<<<<<<< Updated upstream
    <string name="highscore_first">1ST</string>
    <string name="highscore_second">2ND</string>
    <string name="highscore_third">3RD</string>
    <string name="highscore_fourth">4TH</string>
    <string name="highscore_fifth">5TH</string>
=======
    <string name="dialog_record_notify_message">Wonderful! You hit the best 5 records!\nWill you submit your record? </string>
    <string name="dialog_record_notify_yes">Yes</string>
    <string name="dialog_record_notify_no">No</string>
    <string name="dialog_submit_submit">Submit</string>
    <string name="saving_record">Your record is saved! </string>
    <string name="best_record">Best Records</string>
>>>>>>> Stashed changes

>>>>>>> Stashed changes
    <string-array name="fetch_choices">
        <item>All</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>

    <string-array name="grid_choices">
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>

    <string-array name="glide_choices">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="jsoup_choices">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="suggested_urls">
        <item>https://freestocks.org</item>
        <item>https://picography.co</item>
        <item>https://stocksnap.io</item>
        <item>https://www.gratisography.com/</item>
        <item>https://www.reshot.com/</item>
    </string-array>
</resources>